Update description and dependencies in control file

--- a/control
+++ b/control
@@ -2,9 +2,8 @@ Package: com.zodacios.dtcby
 Name: DTCBy
 Version: 1.0.0
 Architecture: iphoneos-arm64
-Description: Jailbroken tweak to bypass screenshot & screen recording detection
+Description: Prevents apps from detecting screenshots and screen recordings
 Maintainer: ZodaciOS
 Author: ZodaciOS
 Section: Tweaks
-Depends: mobilesubstrate | com.ex.libhooker, firmware (>= 14.0), preferenceloader, com.opa334.cephei
-Icon: file:///Library/PreferenceBundles/DTCByPrefs.bundle/icon.png
+Depends: mobilesubstrate | com.ex.libhooker, firmware (>= 14.0), preferenceloader
