--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,10 @@ jobs:
         curl -LO https://github.com/theos/sdks/archive/master.zip
         unzip master.zip
         mv sdks-master/* $HOME/theos/sdks/
+    
+    - name: Install ldid
+      run: |
+        brew install ldid
         
     - name: Build tweak
       run: |
