Add extra plist and define install path

--- a/dtcbyprefs/Makefile
+++ b/dtcbyprefs/Makefile
@@ -12,4 +12,8 @@ DTCByPrefs_EXTRA_FRAMEWORKS = CepheiPrefs
 DTCByPrefs_INSTALL_PATH = /Library/PreferenceBundles
 DTCByPrefs_CFLAGS = -fobjc-arc
 
+DTCByPrefs_INSTALL_PATH = /Library/PreferenceBundles
+
+DTCByPrefs_EXTRA_PLISTS = DTCByPrefs.plist
+
 include $(THEOS_MAKE_PATH)/bundle.mk
